--- a/core/static/templates/core/base/base.html
+++ b/core/static/templates/core/base/base.html
@@ -21,7 +21,7 @@
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-        <link href="{% static 'core\css\base.css' %}" rel="stylesheet" />
+        <link href="{% static 'core/css/base.css' %}" rel="stylesheet" />
         {% block site_css %}{% endblock %}
     </head>
     <body>
@@ -33,7 +33,7 @@
             <div class="border-end bg-white" id="sidebar-wrapper">
                 <div class="sidebar-heading bg-light" style="padding: 8px 0px;">
                     <a href="/" style="padding: 2px;" class="d-flex justify-content-center align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-                        <img src="{% static 'core\images\home.png' %}" alt="" width="32" height="32">
+                        <img src="{% static 'core/images/home.png' %}" alt="" width="32" height="32">
                         <span class="fs-4 fw-bold text-primary mx-2" height="40" 
                             style="background: #27B0FF;
                             background: linear-gradient(to bottom, #27B0FF 0%, #187BFF 75%);
