--- a/core/static/templates/home/index.html
+++ b/core/static/templates/home/index.html
@@ -13,7 +13,7 @@
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url('{% static "core/images/homebg.jpeg" %}') no-repeat center center;
     background-size: cover; padding-top: 5rem; padding-bottom: 5rem;">
-        <div class="col-9 col-sm-6 px-4 py-3 px-lg-5 my-5 mx-auto" style="background-color: #00706bcf;">
+        <div class="px-4 py-4 px-lg-5 my-5 mx-auto" style="width:fit-content;background-color: #00706bcf;">
             <div class="text-center text-white"
                  style="font-family: 'Source Sans Pro',HelveticaNeue-Light,'Helvetica Neue Light','Helvetica Neue',Helvetica,Arial,'Lucida Grande',sans-serif;">
                 <h1 class="display-5 fw-bolder">Sylhet Engineering College</h1>
